Editor Viewer: Tags and controls overlap issue (#2646)
relates to xibosignageltd/xibo-private#806

--- a/ui/src/style/layout-editor.scss
+++ b/ui/src/style/layout-editor.scss
@@ -515,7 +515,7 @@ body.editor-opened {
                 position: absolute;
                 min-width: 100%;
                 width: max-content;
-                height: 20px;
+                height: 22px;
                 bottom: 0;
                 z-index: 2;
                 @include set-transparent-color(background, $xibo-color-neutral-900, 0.5);
